--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,12 +26,12 @@ jobs:
           terraform_version: 1.6.0
 
       - name: AWS 인증 설정
-        run: |
-          echo "[default]" > ~/.aws/credentials
-          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
-          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-          echo "[profile default]" > ~/.aws/config
-          echo "region=${{ env.AWS_REGION }}" >> ~/.aws/config
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
 
       - name: Terraform 초기화
         run: terraform init
