--- a/workflow.yaml
+++ b/workflow.yaml
@@ -26,12 +26,14 @@ jobs:
           terraform_version: 1.6.0
 
       - name: AWS 인증 설정
-        run: |
-          echo "[default]" > ~/.aws/credentials
-          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
-          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-          echo "[profile default]" > ~/.aws/config
-          echo "region=${{ env.AWS_REGION }}" >> ~/.aws/config
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Set Terraform Variables
+        run: echo 'AWS_KEY_PAIR_PUBLIC_KEY=${{ secrets.AWS_KEY_PAIR_PUBLIC_KEY }}' >> $GITHUB_ENV
 
       - name: Terraform 초기화
         run: terraform init
@@ -44,4 +46,4 @@ jobs:
 
       - name: Terraform 적용
         if: github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var="aws_key_pair_public_key=$AWS_KEY_PAIR_PUBLIC_KEY"
